# Action-Segmentation-Utilities

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
base/: README.md  __init__.py  main.py
configs/: __init__.py  asformer.py  base.py  c2ftcn.py  default.yaml  docaar.py  ltcontext.py  paprika.py
evaluator/: README.md  __init__.py  main.py  main.test.py
extractor/: README.md  __init__.py  main.py  train.py
extractor/models/: __init__.py  i3d.py  s3d_howto100m.py  s3d_kinetics.py
loader/: README.md  __init__.py  assembly101.py  ata.py  breakfast.py  c2ftcn.py  gtea.py  howto100m.py  i3d.py  main.py  nissan.py  paprika.py  s3d.py  salads.py
loader/data/50salads/: actions.txt  matching.txt
loader/data/breakfast/: actions.txt  matching.txt
loader/data/gtea/: actions.txt  matching.txt
logger/: README.md  __init__.py  main.py  trace.py
manager/: README.md  __init__.py  hydra.py  mlflow.py
models/: README.md  __init__.py  asformer.py  c2ftcn.py  ltcontext.py
models/original/: asformer.py
models/paprika/: adapter.py  build_knowledge.py  builder.py  dataset_utils.py  get_edges.py  get_nodes.py  get_samples.py  get_sim_scores.py  helper.py  pseudo_label_DS.py  pseudo_label_NRL.py  pseudo_label_TCL.py  pseudo_label_VNM.py  pseudo_label_VTM.py
processor/: README.md  __init__.py  action.py  main.py  split.py
trainer/: README.md  __init__.py  asformer.py  c2ftcn.py  ltcontext.py  main.py  paprika.py
utils/: __init__.py  main.py
visualizer/: README.md  __init__.py  main.py  main.test.py  palette.py  reader.py  writer.py
