[tool.poetry]
name = "asu"
version = "0.1.0"
description = "Utilities for action segmentation tasks"
authors = ["kage1020"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
torchvision = "^0.17.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
opencv-python = "^4.9.0.80"
opencv-contrib-python = "^4.9.0.80"
ffmpeg-python = "^0.2.0"
tqdm = "^4.66.2"
pillow = "^10.3.0"
nvitop = "^1.3.2"
hydra-core = "^1.3.2"
mlflow = "^2.12.2"
setuptools = "^70.0.0"
ruff = "^0.4.10"
einops = "^0.8.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
