[tool.poetry]
name = "asu"
version = "0.1.0"
description = "Utilities for action segmentation tasks"
authors = ["kage1020"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
torchvision = "^0.21.0"
numpy = "^1.26.4"
matplotlib = "^3.10.0"
opencv-python = "^4.11.0.86"
opencv-contrib-python = "^4.11.0.86"
ffmpeg-python = "^0.2.0"
tqdm = "^4.67.1"
pillow = "^10.3.0"
nvitop = "^1.3.2"
hydra-core = "^1.3.2"
mlflow = "^2.20.3"
setuptools = "^70.0.0"
ruff = "^0.9.7"
einops = "^0.8.1"
black = "^25.1.0"
polars = "^1.23.0"
sentence-transformers = "^3.4.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = [
    "E501",
    "F821"
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401"
]
